overflow correction

--- a/style.css
+++ b/style.css
@@ -6,15 +6,19 @@
 .body {
   background-color: red;
   height: 100vh;
+  /* max-width: 100%; */
+  /* overflow: auto; */
+  /* overflow-x: hidden; */
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 2fr 1fr;
+  grid-gap: 10px;
 }
 
 .product-deals {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 10px;
+  grid-column-gap: 5px;
   background-color: white;
 }
 .display-wrap {
@@ -23,7 +27,7 @@
 .display-wrap > .display-description {
   position: absolute;
   top: 0px;
-  right: 0px;
+  right: 5px;
   text-align: right;
 }
 .display-wrap > .display-discount {
@@ -32,20 +36,29 @@
   left: 0px;
 }
 .skincare-image {
-  width: 55vh;
-  height: 40vh;
+  width: 24vw;
+  height: 34vh;
+  max-height: 50vh;
+  /* width: 44vh;
+  height: 34vh;
+  max-height: 50vh; */
 }
 .mobile-image {
-  width: 55vh;
-  height: 40vh;
+  /* width: 22%;
+  height: auto; */
+  width: 24vw;
+  height: 34vh;
+  max-height: 50vh;
 }
 .babyneed-image {
-  width: 55vh;
-  height: 40vh;
+  width: 24vw;
+  height: 34vh;
+  max-height: 50vh;
 }
 .television-image {
-  width: 55vh;
-  height: 40vh;
+  width: 24vw;
+  height: 34vh;
+  max-height: 50vh;
 }
 .brands {
   display: grid;
